trigger/force-app/main/default/objects/TriggerConfig__mdt/TriggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration of Trigger</description>
    <label>Trigger Config</label>
    <pluralLabel>Trigger Configs</pluralLabel>
</CustomObject>