trigger/force-app/main/default/objects/TriggerConfig__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active Status</description>
    <inlineHelpText>Active Status</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>