trigger/force-app/main/default/objects/TriggerConfig__mdt/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <defaultValue>"Apex"</defaultValue>
    <description>Selects whether this handler record executes Apex, Flow, or both.</description>
    <label>Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Apex</fullName><default>true</default><label>Apex</label></value>
            <value><fullName>Flow</fullName><default>false</default><label>Flow</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>