trigger/force-app/main/default/objects/TriggerConfig__mdt/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <description>Trigger handler name</description>
    <inlineHelpText>Trigger handler name</inlineHelpText>
    <label>Handler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>