trigger/force-app/main/default/objects/TriggerConfig__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>99</defaultValue>
    <description>Indicate the order of execution for multiple handler, execute from 0 - 99</description>
    <inlineHelpText>Indicate the order of execution for multiple handler, execute from 0 - 99</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>