trigger/force-app/main/default/objects/TriggerConfig__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>References the object-level configuration record that identifies the Salesforce object.</description>
    <inlineHelpText>Select the TriggerObjectConfig record for this Salesforce object.</inlineHelpText>
    <label>Object Configuration</label>
    <referenceTo>TriggerObjectConfig__mdt</referenceTo>
    <relationshipLabel>Trigger Configurations</relationshipLabel>
    <relationshipName>TriggerObjectConfig</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>